conditional visibility + minor bug fixes

--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -75,14 +75,6 @@ body {
   font-size: 14px;
 }
 
-.addToMatchButton {
-  padding: 20px;
-  text-decoration: none;
-  margin-bottom: 20px;
-}
-
-
-
 
 
 
